# almost-philosophy

./: .gitignore  Dockerfile  ICA_LINGAM.pkl  README.md  build_container  flake.nix  launch_notebook  main.ipynb  monitor_nvidia  requirements.txt  run_container  shell.nix
.github/workflows/: python-package.yml
abandoned_almop_lib/almop/: core.py  gpu.py  math.py
abandoned_almop_lib/tests/: test_core.py  test_data.py
almop/: __init__.py  almop.py  core.py  data.py  gpu.py  math.py
dowhy-programs/: pyproject.toml
dowhy-programs/dowhy_programs/: main.py
notebooks/: config.toml  dowhy.ipynb  exploring-data.ipynb  gpu-calcs.ipynb  simple-gpu-calcs.ipynb
tests/: test_core.py  test_data.py
